fixed dropdown-nav on mobile view

--- a/_lib/scss/_grid.scss
+++ b/_lib/scss/_grid.scss
@@ -1,13 +1,13 @@
 $icons: fontawesome;
 
-:target {
+#page:target {
    background: 
-    -webkit-linear-gradient(left, rgba(0,0,0,1), transparent 1px),
+    -webkit-linear-gradient(left, rgba(0,0,0,1),  transparent 1px),
     -webkit-linear-gradient(left, rgba(0,0,0,.5), transparent 1px),
     -webkit-linear-gradient(left, rgba(0,0,0,.5), transparent 1px),
     -webkit-linear-gradient(left, rgba(0,0,0,.1), transparent 1px),
     -webkit-linear-gradient(left, rgba(0,0,0,.1), transparent 1px),
-    -webkit-linear-gradient(rgba(0,0,0,.1), transparent 1px);
+    -webkit-linear-gradient(top,  rgba(0,0,0,.1), transparent 1px);
   background-size: $unit, $unit, $unit, $unit, $unit, $ratio;
   background-position: 0 0, $ratio/2 0, -$ratio/2 0, $ratio 0, -$ratio 0; }
 
