--- a/_lib/scss/_modules.scss
+++ b/_lib/scss/_modules.scss
@@ -13,21 +13,27 @@
   li {
     a {
       @include box();
+      color: $white;
       &.jump-nav {
         float: right;
         z-index: 1002; }
       &.jump-content {
         float: left;
         z-index: 1003; } } } }
+.jump-nav {
+	background: $black;
+	color: $white; }
 #nav {
   position: absolute;
   top: 0;
   padding-top: 2*$ratio;
   z-index: 999;
   width: 100%;
+  background: $black;
   .sub-menu { 
     display: none; }
   a {
+  	color: $white;
     overflow: hidden;
     height: 0;
     line-height: 0;
